[bumpversion]
current_version = 0.1.0-alpha.0
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)\.(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}

[metadata]
name = Concierge
version = attr: concierge.__version__
description = Fully Fledged Discord Bot Framework
author = Concierge Contributors
author-email = contact@taven.me
license = mit
license_file = LICENSE
url = https://github.com/OpenDebates/Concierge
long-description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Framework :: AsyncIO
	Intended Audience :: Other Audience
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Topic :: Communications :: Chat

[options]
packages = find:
python_requires = >=3.9
install_requires =
	toml
    quart
	discord.py
    discord-ext-ipc
	verboselogs

setup_requires =
	verboselogs

[options.extras_require]
release =
	bump2version

[options.packages.find]
include =
	concierge
	concierge.*

[options.entry_points]
console_scripts =
	concierge=concierge.__main__:main

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[tool:pytest]
norecursedirs =
	.git
	.tox
	.env
	dist
	build
	migrations
python_files =
	test_*.py
	*_test.py
	tests.py
addopts =
	-ra
	--strict
	--ignore=docs/conf.py
	--ignore=setup.py
	--ignore=ci
	--ignore=.eggs
	--doctest-modules
	--doctest-glob=\*.rst
	--tb=short

[bumpversion:part:release]
optional_value = gamma
values =
	alpha
	beta
	gamma

[bumpversion:part:build]

[bumpversion:file:./concierge/__init__.py]